# OpenCL_Examples

OpenCL-benchmark/: .gitignore  Makefile  gpu.c
OpenCLN-BodySimulation/OpenCL_NBody_Simulation.xcodeproj/: project.pbxproj
OpenCLN-BodySimulation/OpenCL_NBody_Simulation.xcodeproj/project.xcworkspace/xcuserdata/devnul.xcuserdatad/: UserInterfaceState.xcuserstate
OpenCLN-BodySimulation/OpenCL_NBody_Simulation.xcodeproj/xcuserdata/devnul.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OpenCLN-BodySimulation/OpenCL_NBody_Simulation.xcodeproj/xcuserdata/devnul.xcuserdatad/xcschemes/: OpenCL_NBody_Simulation.xcscheme
OpenCLN-BodySimulation/Resources/en.lproj/: MainMenu.xib
OpenCLN-BodySimulation/Sources/Kernels/: nbody_cpu.ocl
OpenCLN-BodySimulation/Sources/Model/Foundation/Bitmap/: CGBitmap.mm
OpenCLN-BodySimulation/Sources/Model/Foundation/Files/: CFDataFile.mm
OpenCLN-BodySimulation/Sources/Model/HUD/Meter/Timer/: HUDMeterTimer.mm
OpenCLN-BodySimulation/Sources/Model/NBody/Engine/: NBodyEngine.mm
OpenCLN-BodySimulation/Sources/Model/OpenGL/Utilities/Texture/2D/: GLUTexture.mm
OpenCLN-BodySimulation/Sources/Model/OpenGL/Utilities/Texture/Gaussian/: GLUGaussian.mm
OpenCLN-BodySimulation/Sources/View/: OpenGLView.mm
OpenCL_Books_CodeTest/MatthewScarpino/source_code_gnu/Ch2/device_ext_test/: device_ext_test.c
OpenCL_Books_CodeTest/MatthewScarpino/source_code_mac/: README.txt
OpenCL_Books_CodeTest/MatthewScarpino/source_code_mac/Ch8/create_kernels/: create_kernels.cpp
OpenCL_Books_CodeTest/MatthewScarpino/source_code_mac/Ch8/full_context/: Makefile  full_context.cpp
OpenCL_Books_CodeTest/MatthewScarpino/source_code_mac/Ch8/map_copy/: Makefile  map_copy.cpp
OpenCL_Books_CodeTest/MatthewScarpino/source_code_mac/Ch8/profile/: Makefile  profile.cpp
OpenCL_Books_CodeTest/MatthewScarpino/source_code_vs2010/: README.txt
OpenCL_Books_CodeTest/RavishekharBanger/Code/: .gitignore  CMakeLists.txt  FindOpenCL.cmake  Readme.doc
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-1/: CMakeLists.txt  saxpy.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-11/: CMakeLists.txt  bitonic_sort.cpp  dataForKNN.cpp  kNNData.txt  knn_classification.cpp  linear_regression.cpp  parabolic_regression.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-2/: CMakeLists.txt  get_device_property.cpp  get_platform_property.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-3/: CMakeLists.txt  Readme.txt  bufferRectangularReads.cpp  copyRectangular.cpp  histogram.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-4/: CMakeLists.txt  getSupportedImageFormats.cpp  histogram_image.cpp  image_sampler.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-5/: CMakeLists.txt  create_binary.cpp  saxpy_binary.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-6/: CMakeLists.txt  profiling_saxpy.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-7/: CMakeLists.txt  sizeof.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-8/: CMakeLists.txt  MatrixMultiplication.cpp  histogram.cpp  histogram_cu.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-9/: CMakeLists.txt  gaussian.cpp  gaussian.h  gaussian_kernel.h  median.cpp  median.h  median_kernel.h  sobel.cpp  sobel.h  sobel_kernel.h
OpenCL_Books_CodeTest/RavishekharBanger/Code/chapter-9/jpeg_decoder/: CMakeLists.txt  Framewave.cpp  Framewave.h  JPEG_Decoder.cpp  JPEG_Decoder.hpp  JPEG_Decoder_Kernels.h  Readme.txt  image.cpp  image.h  jpeg_marker.cpp  jpeg_marker.h  scan.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/common/: Timer.cpp  bmp_image.cpp
OpenCL_Books_CodeTest/RavishekharBanger/Code/include/: Timer.h  bmp_image.h
OpenCL_GPURaytracing/Cornell_OpenCL/Cornell_OpenCL/: main.cpp  radianceGPU.cl  result_image.ppm  scene.h
OpenCL_GPURaytracing/Cornell_OpenCL/Cornell_OpenCL.xcodeproj/: project.pbxproj
OpenCL_GPURaytracing/Cornell_OpenCL/Cornell_OpenCL.xcodeproj/project.xcworkspace/xcuserdata/devnul.xcuserdatad/: UserInterfaceState.xcuserstate
OpenCL_GPURaytracing/Cornell_OpenCL/Cornell_OpenCL.xcodeproj/xcshareddata/xcschemes/: Cornell_OpenCL.xcscheme
OpenCL_GPURaytracing/Cornell_OpenCL/Cornell_OpenCL.xcodeproj/xcuserdata/devnul.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenCL_GPURaytracing/Cornell_OpenCLGrid/Cornell_OpenCLGrid/: main.cpp
OpenCL_GPURaytracing/Cornell_OpenCLGrid/Cornell_OpenCLGrid.xcodeproj/project.xcworkspace/xcuserdata/devnul.xcuserdatad/: UserInterfaceState.xcuserstate
OpenCL_GPURaytracing/Cornell_OpenCLGrid/Cornell_OpenCLGrid.xcodeproj/xcshareddata/xcschemes/: Cornell_OpenCLGrid.xcscheme
OpenCL_GPURaytracing/Cornell_OpenCLGrid/Cornell_OpenCLGrid.xcodeproj/xcuserdata/devnul.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenCL_Hello_World_Example/: .gitignore  CMakeLists.txt  Makefile  hello.c
OpenCL_Hello_World_Example/hello.xcodeproj/: project.pbxproj
OpenCL_Hello_World_Example/hello.xcodeproj/project.xcworkspace/xcuserdata/devnul.xcuserdatad/: UserInterfaceState.xcuserstate
OpenCL_Hello_World_Example/hello.xcodeproj/xcuserdata/devnul.xcuserdatad/xcschemes/: hello.xcscheme  xcschememanagement.plist
OpenCL_RayTraced_Quaternion_Julia-Set_Example/: qjulia.c  qjulia_kernel.cl
OpenCL_RayTraced_Quaternion_Julia-Set_Example/qjulia.xcodeproj/project.xcworkspace/xcuserdata/devnul.xcuserdatad/: UserInterfaceState.xcuserstate
OpenCL_RayTraced_Quaternion_Julia-Set_Example/qjulia.xcodeproj/xcuserdata/devnul.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenCL_Test/: .gitignore  CMakeLists.txt  Kernel.cl  Makefile  MathCode.cpp  MathCode.h  main.cpp
OpenCL_Test/OpenCL.xcodeproj/: project.pbxproj
OpenCL_Test/OpenCL.xcodeproj/project.xcworkspace/xcuserdata/devnul.xcuserdatad/: UserInterfaceState.xcuserstate
OpenCL_Test/OpenCL.xcodeproj/xcuserdata/devnul.xcuserdatad/xcschemes/: OpenCL.xcscheme  xcschememanagement.plist
